[package]
name = "oxipng-worker"
version = "0.1.0"
authors = ["swg <git@swg.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.14"
serde_json = "1.0.67"
text-to-png = "0.2.0"
urlencoding = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }
oxipng = { version = "8.0.0", features = ["freestanding"] }
lazy_static = "1.4.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
